[gd_scene load_steps=16 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://HealthBar/Background_HP_Bar.png" type="Texture" id=2]
[ext_resource path="res://HealthBar/HP_Bar.png" type="Texture" id=3]
[ext_resource path="res://Player/HP_Bar.gd" type="Script" id=4]
[ext_resource path="res://Fonts/Roboto Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Player/AP_Bar.gd" type="Script" id=6]
[ext_resource path="res://CrossHairs/Dot_CrossHair.png" type="Texture" id=7]
[ext_resource path="res://Player/CrossHair.gd" type="Script" id=8]
[ext_resource path="res://Fonts/Custom/16Size_Roboto.tres" type="DynamicFont" id=9]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 1.5

[sub_resource type="CapsuleMesh" id=2]
radius = 0.5
mid_height = 1.5

[sub_resource type="PrismMesh" id=3]
size = Vector3( 0.5, 0.5, 0.1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.00784314, 1, 0, 1 )

[sub_resource type="DynamicFont" id=5]
size = 24
outline_size = 1
outline_color = Color( 1, 0.964706, 0.713726, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 22
outline_size = 1
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="BaseCamera" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0.6 )

[node name="Camera" type="Camera" parent="BaseCamera"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
current = true
fov = 90.0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.28, 0 )
shape = SubResource( 1 )

[node name="Mesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.28, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Arrow" type="MeshInstance" parent="Mesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0890854, -1.3607 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP_Control" type="Control" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 770.0
margin_right = -1100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP_Label" type="Label" parent="HUD/HP_Control"]
margin_left = 18.1906
margin_top = 44.0
margin_right = 58.1906
margin_bottom = 79.0
custom_fonts/font = SubResource( 5 )
text = "HP"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP_Bar" type="TextureProgress" parent="HUD/HP_Control"]
margin_left = 64.5
margin_top = 53.0
margin_right = 414.5
margin_bottom = 83.0
step = 0.1
value = 100.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="HUD/HP_Control/HP_Bar"]

[node name="AP_Control" type="Control" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1100.0
margin_top = 770.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AP_Label" type="Label" parent="HUD/AP_Control"]
margin_left = 374.883
margin_top = 44.0
margin_right = 414.883
margin_bottom = 79.0
custom_fonts/font = SubResource( 5 )
text = "AP"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AP_Bar" type="TextureProgress" parent="HUD/AP_Control"]
margin_left = 21.0621
margin_top = 53.0
margin_right = 371.062
margin_bottom = 83.0
step = 0.1
value = 100.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
fill_mode = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="HUD/AP_Control/AP_Bar"]

[node name="CrossHair" type="Sprite" parent="HUD"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 7 )
script = ExtResource( 8 )

[node name="DEBUG" type="Control" parent="."]
margin_left = 659.0
margin_top = 75.0
margin_right = 941.0
margin_bottom = 357.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DEBUG_Label" type="Label" parent="DEBUG"]
margin_left = 106.589
margin_top = 11.5946
margin_right = 176.589
margin_bottom = 38.5946
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 0.964706, 0.713726, 1 )
text = "DEBUG"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprinting" type="Label" parent="DEBUG"]
margin_left = 100.643
margin_top = 42.514
margin_right = 185.643
margin_bottom = 69.514
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 0.964706, 0.713726, 1 )
text = "Sprinting"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="DEBUG"]
margin_left = 111.875
margin_top = 80.8173
margin_right = 169.875
margin_bottom = 104.817
align = 1

[node name="Heal" type="Button" parent="DEBUG"]
margin_left = 109.0
margin_top = 119.0
margin_right = 173.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 0.964706, 0.713726, 1 )
text = "Heal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Damage" type="Button" parent="DEBUG"]
margin_left = 106.168
margin_top = 148.466
margin_right = 178.168
margin_bottom = 173.466
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 0.964706, 0.713726, 1 )
text = "Damage"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stimpack" type="Button" parent="DEBUG"]
margin_left = 101.93
margin_top = 177.704
margin_right = 180.93
margin_bottom = 202.704
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 0.964706, 0.713726, 1 )
text = "Stimpack"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_entered" from="DEBUG/LineEdit" to="HUD/HP_Control/HP_Bar" method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="DEBUG/Heal" to="HUD/HP_Control/HP_Bar" method="_on_Heal_pressed"]
[connection signal="pressed" from="DEBUG/Damage" to="HUD/HP_Control/HP_Bar" method="_on_Damage_pressed"]
[connection signal="pressed" from="DEBUG/Stimpack" to="HUD/HP_Control/HP_Bar" method="_on_Stimpack_pressed"]
